--- a/src/style.css
+++ b/src/style.css
@@ -9,15 +9,9 @@
         @apply font-poppins;
     }
     body {
-        @apply bg-slate-50;
+        @apply bg-slate-50 text-sm dark:bg-slate-900 dark:text-white;
     }
     
-}
-
-@layer components {
-    .section-container {
-        @apply mx-auto max-w-5xl px-4;
-    }
 }
 
 @layer utilities {
