--- a/src/style.css
+++ b/src/style.css
@@ -10,12 +10,18 @@
     }
     body {
         @apply bg-slate-50 text-sm sm:text-base dark:bg-slate-900 dark:text-white;
-    }
-    
+    } 
 }
-
 @layer utilities {
     .font-poppins {
         font-family: 'Poppins', sans-serif;
     }
+}
+
+/* toastification overrides */
+.Vue-Toastification__toast-body {
+    @apply text-sm flex items-center space-x-0 !important;
+}
+.Vue-Toastification__icon  {
+    @apply mr-2 w-4 !important;
 }
